--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,51 +1,67 @@
 ---
+import Background from '../components/background.astro';
+import Header from '../components/header.astro';
+import '@fontsource-variable/onest';
+
+
 interface Props {
-	title: string;
+  title: string;
+  description: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content={description} />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <Background />
+    <Header />
+    <slot />
+  </body>
 </html>
+
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+  	:root {
+		color-scheme: light dark;
+
+		--light-bg: ghostwhite;
+		--light-color: #030303;
+
+		--dark-bg: #030303;
+		--dark-color: ghostwhite;
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
+		font-family: 'Onest Variable', system-ui, sans-serif;
+		scroll-behavior: smooth; 
 	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+
+	body {
+		background: light-dark(var(--light-bg), var(--dark-bg));
+		color: light-dark(var(--light-color, var(--dark-color)));
+		display: flex;
+		flex-direction: column;
+		height: 100vh;
+		margin: 0 auto;
+		max-width: 100vw;
+	}
+
+	::-webkit-scrollbar {
+		width: 4px;
+		background-color: rgba(131, 131, 131, 0.1);
+		margin-left: 1em;
+	}
+	
+	::-webkit-scrollbar-thumb {
+		background-color: rgba(129, 129, 129, 0.3);
+		border-radius: 4px;
 	}
 </style>
