--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,8 +1,7 @@
-<header class="flex justify-center items-center py-3 w-[1120px] mt-5 mx-auto">
+<header class="flex justify-center items-center py-3 w-full lg:w-[1120px] mt-5 mx-auto">
     <nav class="flex flex-row gap-x-10">
-        <a href="/">Home</a>
-        <a href="/projects">Projects</a>
-        <a href="/about">About</a>
-        <a href="/contact">Contact</a>
+        <a href="#about">About</a>
+        <a href="#experience">Experience</a>
+        <a href="#projects">Projects</a>
     </nav>
 </header>
