--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
 import Background from '../components/background.astro';
 import Header from '../components/header.astro';
+import Footer from '../components/footer.astro';
+
 import '@fontsource-variable/onest';
 
 
@@ -23,9 +25,10 @@ const { title, description } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <Background />
+    <Background class="hidden lg:!block"/>
     <Header />
     <slot />
+	<Footer />
   </body>
 </html>
 
@@ -52,6 +55,7 @@ const { title, description } = Astro.props;
 		height: 100vh;
 		margin: 0 auto;
 		max-width: 100vw;
+		overflow-x: hidden;
 	}
 
 	::-webkit-scrollbar {
