--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,60 +1,58 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import LinkedIn from '../components/icons/linkedin.astro'
-import SocialPills from '../components/social-pills.astro';
+import Pills from '../components/social-pills.astro';
 import Github from '../components/icons/github.astro';
 import Email from '../components/icons/email.astro';
-import gsap from 'gsap';
+import Website from '../components/icons/web.astro';
 ---
 
 <Layout 
 	title="Portfolio de Jorge Borja - Analista de Datos"
 	description="Analista de datos con +3 años de experiencia, conocimientos avanzados en matemática y estadística. Ofrece servicios de análisis de la información, ciencia de datos y desarrollo de aplicaciones visuales."
 >
-	<main>
+	<main class="sm:!py-7">
 		<section class="w-full lg:w-[740px] mx-auto py-60 h-screen z-1">
-			<h2 class="text-green-600 text-center text-4xl animationn font-semibold">Data Analyst</h2>
+			<h2 class="text-[#9d4edd] text-center text-4xl animationn font-semibold">Data Analyst</h2>
 			<h1 class="text-center text-7xl font-bold">Jorge Borja Serrano</h1>
-			<h3 class="text-gray-500 text-center mt-2">Data's Storyteller, Insight's Architect.</h3>
+			<span class="flex justify-center text-gray-500 mt-2">Data's Storyteller, Insight's Architect.</span>
 
-			<nav class="flex gap-x-4 mt-3 justify-center">
-				<SocialPills href="https://www.linkedin.com/in/jorgeborjas25/">
+			<nav class="flex flex-col lg:flex-row gap-4 mt-3 justify-center">
+				<Pills href="https://www.linkedin.com/in/jorgeborjas25/">
 					<LinkedIn class="size-5"/>
 					LinkedIn
-				</SocialPills>
-				<SocialPills href="https://github.com/unfresh25">
+				</Pills>
+				<Pills href="https://github.com/unfresh25">
 					<Github class="size-5"/>
 					Github
-				</SocialPills>
-				<SocialPills href="mailto:jorgeborja48@gmail.com">
+				</Pills>
+				<Pills href="mailto:jorgeborja48@gmail.com">
 					<Email class="size-5"/>
 					jorgeborja48@gmail.com
-				</SocialPills>
+				</Pills>
 			</nav>
 		</section>
-		<section class="flex justify-center w-full lg:w-[1140px] h-screen mx-auto text-animation z-1">
-			<h1 class="text-center text-9xl mx-auto z-[-1] opacity-60 font-black about-text">ABOUT ME</h1>
-			<p class="text-5xl text-pretty reveal-text font-semibold mt-24">
-				Data analyst with <span class="text-green-600 font-bold">+3 years of experience</span> in data analysis and interpretation. 
-				Strong foundation in <span class="text-green-600 font-bold">mathematics and statistics</span>, with a passion for theoretical 
+		<section class="flex justify-center w-full lg:w-[1140px] h-screen mx-auto text-animation z-1 mt-14" id="about">
+			<h1 class="text-center !text-5xl lg:!text-9xl mx-auto z-[-1] opacity-60 font-black lg:-mt-16 section-title">ABOUT ME</h1>
+			<p class="!text-xl lg:!text-5xl text-pretty reveal-text font-semibold m-4 lg:m-0 mt-28">
+				Data analyst with <span class="text-[#9d4edd] font-bold">+3 years of experience</span> in data analysis and interpretation. 
+				Strong foundation in <span class="text-[#9d4edd] font-bold">mathematics and statistics</span>, with a passion for theoretical 
 				concepts and their practical applications. Adept at leveraging statistical techniques and data visualization tools to 
-				drive <span class="text-green-600 font-bold">insights</span> and support <span class="text-green-600 font-bold">decision-making</span> 
+				drive <span class="text-[#9d4edd] font-bold">insights</span> and support <span class="text-[#9d4edd] font-bold">decision-making</span> 
 				processes. 
 			</p>
 		</section>
-		<section class="relative flex justify-center m-auto flex-col items-center timeline">
-			<h1 class="text-center text-9xl mx-auto z-[-1] opacity-60 font-black about-text">EXPERIENCE</h1>
+		<section class="relative flex justify-center flex-col items-center timeline m-4 lg:m-auto" id="experience">
+			<h1 class="text-center !text-5xl lg:!text-9xl mx-auto z-[-1] opacity-60 font-black section-title">EXPERIENCE</h1>
 			<article class="mt-[-150px]">
 				<div class="relative flex flex-col items-center" style="flex-flow: column;">
-					<div class="absolute w-1 h-full bg-[#222] z-[-1]">
-						<div class="w-1 h-[50vh] fixed bottom-[50vh] bg-transparent line-timeline"></div>
-					</div>
+					<div class="absolute w-1 h-0 bg-[#9d4edd] z-[-1] line-timeline" />
 					<div 
 						class="grid grid-cols-3 gap-0 w-full ml-auto mr-auto pt-20 pb-20 opacity-10 timeline-text-k" 
 						style="grid-template-columns: 1fr 160px 1fr;"
 					>
 						<div>
-							<span class="font-medium text-5xl">
+							<span class="font-medium !text-base lg:!text-5xl">
 								September, 2023
 							</span>
 						</div>
@@ -62,14 +60,14 @@ import gsap from 'gsap';
 							<div class="flex justify-center size-4 bg-white rounded-full m-auto ball-k" />
 						</div>
 						<div>
-							<p class="font-medium text-xl text-pretty exp-p">
-								Started working at <span class="text-green-600 font-bold">Komatsu Colombia S.A.S.</span> as the principal data analyst,
-								responsible for <span class="text-green-600 font-bold">centralizing data</span> from over 100 databases,
-								creating <span class="text-green-600 font-bold">automation workflows</span> in Azure Data Factory, and developing
-								projects such as an inventory demand <span class="text-green-600 font-bold">forecasting</span> application,
-								<span class="text-green-600 font-bold">Monte Carlo simulations</span> for machine working hours, work order 
-								<span class="text-green-600 font-bold">automation</span>, predictions for <span class="text-green-600 font-bold">service 
-								offerings</span>, and creating elegant <span class="text-green-600 font-bold">Power BI reports</span>.
+							<p class="font-medium !text-xs lg:!text-xl text-pretty exp-p">
+								Started working at <span class="text-[#9d4edd] font-bold">Komatsu Colombia S.A.S.</span> as the principal data analyst,
+								responsible for <span class="text-[#9d4edd] font-bold">centralizing data</span> from over 100 databases,
+								creating <span class="text-[#9d4edd] font-bold">automation workflows</span> in Azure Data Factory, and developing
+								projects such as an inventory demand <span class="text-[#9d4edd] font-bold">forecasting</span> application,
+								<span class="text-[#9d4edd] font-bold">Monte Carlo simulations</span> for machine working hours, work order 
+								<span class="text-[#9d4edd] font-bold">automation</span>, predictions for <span class="text-[#9d4edd] font-bold">service 
+								offerings</span>, and creating elegant <span class="text-[#9d4edd] font-bold">Power BI reports</span>.
 							</p>														
 						</div>
 					</div>
@@ -78,7 +76,7 @@ import gsap from 'gsap';
 						style="grid-template-columns: 1fr 160px 1fr"
 					>
 						<div>
-							<span class="font-medium text-5xl">
+							<span class="font-medium !text-base lg:!text-5xl">
 								August, 2021
 							</span>
 						</div>
@@ -86,13 +84,13 @@ import gsap from 'gsap';
 							<div class="flex justify-center size-4 bg-white rounded-full m-auto ball-ur" />
 						</div>
 						<div>
-							<p class="font-medium text-xl text-pretty exp-p">
-								Started working at <span class="text-green-600 font-bold">Urbefuturo</span> as a programmer data analyst, responsible for 
-								the <span class="text-green-600 font-bold">implementation of statistical methods</span> for data analysis and 
-								<span class="text-green-600 font-bold">restructuring</span> of the database. Creation of <span class="text-green-600 font-bold">reports 
-								and data visualization</span> using Power BI. Implementation of <span class="text-green-600 font-bold">geolocation</span> to 
+							<p class="font-medium !text-xs lg:!text-xl text-pretty exp-p">
+								Started working at <span class="text-[#9d4edd] font-bold">Urbefuturo</span> as a programmer data analyst, responsible for 
+								the <span class="text-[#9d4edd] font-bold">implementation of statistical methods</span> for data analysis and 
+								<span class="text-[#9d4edd] font-bold">restructuring</span> of the database. Creation of <span class="text-[#9d4edd] font-bold">reports 
+								and data visualization</span> using Power BI. Implementation of <span class="text-[#9d4edd] font-bold">geolocation</span> to 
 								keep control of the surveys and, consequently, implementation of predictive models to find the most 
-								<span class="text-green-600 font-bold">optimal locations</span> for conducting the surveys.
+								<span class="text-[#9d4edd] font-bold">optimal locations</span> for conducting the surveys.
 							</p>														
 						</div>
 					</div>
@@ -101,7 +99,7 @@ import gsap from 'gsap';
 						style="grid-template-columns: 1fr 160px 1fr"
 					>
 						<div>
-							<span class="font-medium text-5xl">
+							<span class="font-medium !text-base lg:!text-5xl">
 								April, 2023 - May - 2023
 							</span>
 						</div>
@@ -109,10 +107,10 @@ import gsap from 'gsap';
 							<div class="flex justify-center size-4 bg-white rounded-full m-auto ball-phd" />
 						</div>
 						<div>
-							<p class="font-medium text-xl text-pretty exp-p">
-								Advisor for <span class="text-green-600 font-bold">PhD thesis in mathematics</span>. Translation of existing codes to create 
-								<span class="text-green-600 font-bold">optimizations and implement</span> new analysis methods. Created <span class="text-green-600 font-bold">simulation 
-								of SPH</span> to understand its behavior in different scenarios and in different quantities. <span class="text-green-600 font-bold">Improvement</span> 
+							<p class="font-medium !text-xs lg:!text-xl text-pretty exp-p">
+								Advisor for <span class="text-[#9d4edd] font-bold">PhD thesis in mathematics</span>. Translation of existing codes to create 
+								<span class="text-[#9d4edd] font-bold">optimizations and implement</span> new analysis methods. Created <span class="text-[#9d4edd] font-bold">simulation 
+								of SPH</span> to understand its behavior in different scenarios and in different quantities. <span class="text-[#9d4edd] font-bold">Improvement</span> 
 								of the obtained mathematical calculations and conversion to code.
 							</p>														
 						</div>
@@ -146,24 +144,83 @@ import gsap from 'gsap';
 				<img loading="lazy" src="https://www.loopple.com/img/tailwind-logo.png" class="max-w-none" alt="Tailwind">
 			</article>
 		</section>		
-		<section class="w-full lg:w-[1140px] mx-auto mt-32 h-screen z-1">
-			<h1 class="text-center text-9xl mx-auto z-[-1] opacity-60 font-black about-text">PROJECTS</h1>
+		<section class="w-full lg:w-[1140px] mx-auto mt-32 z-1 projects-section" id="projects">
+			<h1 class="text-center !text-5xl lg:!text-9xl mx-auto z-[-3] opacity-60 font-black section-title">PROJECTS</h1>
+			<article class="flex flex-col w-full h-screen bg-[#222] mt-80 opacity-0 rounded-md overflow-hidden efinex">
+				<div class="relative w-full h-full video-container">
+					<video src="/videos/efinex-video.mp4" class="absolute top-0 left-0 w-full h-full object-cover" muted></video>
+					<div class="
+						absolute z-2 bottom-0 top-0 w-full h-full
+						bg-gradient-to-b from-transparent from-40% via-black/50 to-black/80
+					">
+					</div>
+					<div class="absolute opacity-0 top-[40%] z-10 px-3 lg:p-16 project-hover-text">
+						<h2 class="!text-3xl lg:!text-6xl font-bold text-[#9d4edd] animationn">EFINEX</h2>
+						<p class="mt-5 text-pretty text-base lg:!text-xl project-exp">
+							This web application allows users to explore the current stock market by interacting with statistical graphs and viewing market 
+							data by hovering over them. It includes indicators such as On-Balance Volume (OBV), Moving Average Convergence/Divergence (MACD), 
+							Stochastic Oscillator (SO), and Accumulation/Distribution (A/D). The app offers an excellent user experience, developed with Dash and 
+							Plotly APIs, and was challenging to create due to the multiple callbacks and statistical calculations involved.
+						</p>
+
+						<nav class="flex gap-x-3 mt-3">
+							<Pills href="https://github.com/unfresh25/finance-dash-explorer">
+								<Github class="size-5" />
+								View code
+							</Pills>
+							<Pills href="https://finance-dash-explorer.onrender.com/">
+								<Website class="size-5" />
+								View website
+							</Pills>
+						</nav>
+					</div>
+				</div>
+			</article>
+			<article class="flex flex-col w-full h-screen bg-[#222] mt-80 opacity-0 rounded-md overflow-hidden f1-dash">
+				<div class="relative w-full h-full video-container">
+					<video src="/videos/f1-video.mp4" class="absolute top-0 left-0 w-full h-full object-cover" muted></video>
+					<div class="
+						absolute z-2 bottom-0 top-0 w-full h-full
+						bg-gradient-to-b from-transparent from-10% via-black/50 to-black/80
+					">
+					</div>
+					<div class="absolute opacity-0 top-[40%] z-10 px-3 lg:p-16 project-hover-text">
+						<h2 class="!text-3xl lg:!text-6xl font-bold text-[#9d4edd] animationn">F1 Dashboard</h2>
+						<p class="mt-5 text-pretty text-base lg:!text-xl project-exp">
+							The application is designed to provide a comprehensive overview of Formula 1 racing data, including race results, driver performance, and circuit 
+							information. The user can explore and analyze the data in various ways to gain insights into the drivers, races, and circuits of the world's most 
+							prestigious Formula 1 racing organization.
+						</p>
+
+						<nav class="flex gap-x-3 mt-3">
+							<Pills href="https://github.com/unfresh25/finance-dash-explorer">
+								<Github class="size-5" />
+								View code
+							</Pills>
+							<Pills href="https://finance-dash-explorer.onrender.com/">
+								<Website class="size-5" />
+								View website
+							</Pills>
+						</nav>
+					</div>
+				</div>
+			</article>
 		</section>
 	</main>
 </Layout>
 
 <style>
 	.animationn {
-		background: linear-gradient(to right, rgb(22, 163, 74) 0, white 10%, rgb(22, 163, 74) 20%);
+		background: linear-gradient(to right, #9d4edd 0, white 10%, #9d4edd 20%);
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
 		animation: shine 3s linear infinite;
 	}
 
-	.about-text {
+	.section-title {
 		color: transparent;
 		-webkit-text-fill-color: transparent;
-		-webkit-text-stroke-width: 1px;
+		-webkit-text-stroke-width: 1.3px;
 		-webkit-text-stroke-color: white;
 		font-size: 180px;
 	}
@@ -199,8 +256,28 @@ import gsap from 'gsap';
 	}
 
 	.skills > img {
-		height: 100px;
+		height: 50px;
 	}
+
+	@media (min-width: 1024px) {
+		.skills > img {
+			height: 100px;
+		}
+	}
+
+	.project-exp {
+		max-width: 60ch;
+	}
+
+	.video-container:hover .project-hover-text{
+		opacity: 1;
+	}
+
+	.project-hover-text {
+		opacity: 0;
+		transition: opacity 0.5s ease-in-out;
+	}
+
 </style>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -208,117 +285,5 @@ import gsap from 'gsap';
 <script src="https://unpkg.com/split-type"></script>
 <script src="https://unpkg.com/lenis@1.0.45/dist/lenis.min.js"></script> 
 
-<script>
-	import SplitType from 'split-type';
-
-	gsap.registerPlugin(ScrollTrigger)
-
-	const splitTypes = document.querySelectorAll('.reveal-text')
-
-	splitTypes.forEach((char, i) => {
-		const text = new SplitType(char as HTMLElement, { types: 'chars' });
-
-		gsap.from(text.chars, {
-			scrollTrigger: {
-				trigger: char,
-				start: 'top 80%',
-				end: 'top 10%',
-				scrub: true,
-			},
-			opacity: .2,
-			stagger: .1,
-		})
-	})
-
-	let tl = gsap.timeline({
-		scrollTrigger: {
-			trigger: '.timeline',
-			start: '0% 50%',
-			end: '80% 50%',
-			scrub: 1,
-		}
-	})
-
-	const lineTimeline = document.querySelector('.line-timeline') as HTMLElement;
-
-	tl.to('.line-timeline', {
-		'background': 'rgb(22, 163, 74)',
-		onStart: function() {
-			if (lineTimeline !== null) {
-				lineTimeline.style.backgroundColor = 'transparent';
-			}
-		},
-		onComplete: function() {
-			if (lineTimeline !== null) {
-				lineTimeline.style.backgroundColor = 'transparent';
-			}
-		}
-	})
-
-	type TimelineParams = {
-		trigger: string,
-		start: string,
-		end: string,
-		target: string,
-		properties: Record<string, any>
-	};
-
-	function createTimeline({ trigger, start, end, target, properties }: TimelineParams) {
-		return gsap.timeline({
-			scrollTrigger: {
-				trigger: trigger,
-				start: start,
-				end: end,
-				scrub: 1,
-			}
-		}).to(target, properties);
-	}
-
-	let tl_t = createTimeline({
-		trigger: '.timeline',
-		start: '-20% 50%',
-		end: '80% 50%',
-		target: '.timeline-text-k',
-		properties: { opacity: 1 }
-	});
-
-	let tl_ur = createTimeline({
-		trigger: '.timeline',
-		start: '40% 50%',
-		end: '80% 50%',
-		target: '.timeline-text-ur',
-		properties: { opacity: 1 }
-	});
-
-	let tl_phd = createTimeline({
-		trigger: '.timeline',
-		start: '60% 50%',
-		end: '80% 50%',
-		target: '.timeline-text-phd',
-		properties: { opacity: 1 }
-	});
-
-	let tl_b_k = createTimeline({
-		trigger: '.timeline',
-		start: '20% 50%',
-		end: '80% 50%',
-		target: '.ball-k',
-		properties: { y: 100 }
-	});
-
-	let tl_b_ur = createTimeline({
-		trigger: '.timeline',
-		start: '60% 50%',
-		end: '80% 50%',
-		target: '.ball-ur',
-		properties: { y: 100 }
-	});
-
-	let tl_b_phd = createTimeline({
-		trigger: '.timeline',
-		start: '70% 50%',
-		end: '80% 50%',
-		target: '.ball-phd',
-		properties: { y: 100 }
-	});
-</script>
+<script src="../scripts/gsap.ts"></script>
+<script src="../scripts/video_hover.ts"></script>
