--- a/src/components/background.astro
+++ b/src/components/background.astro
@@ -1,5 +1,5 @@
 <section>
-    <div class="fixed w-full h-full bg-[url('img/bg.png')] z-[-80] bg-2x"/>
+    <div class="fixed w-full h-full bg-[url('/img/bg.png')] z-[-80] bg-2x"/>
     <div class="absolute w-60 h-60 z-[-90] bg-[#f8f3ea] rounded-full opacity-30 blur-3xl" id="hero-glow"/>
 </section>
 
