--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Pills from '../components/social-pills.astro';
 import Github from '../components/icons/github.astro';
 import Email from '../components/icons/email.astro';
 import Website from '../components/icons/web.astro';
+import Download from '../components/icons/download.astro';
 ---
 
 <Layout 
@@ -26,6 +27,10 @@ import Website from '../components/icons/web.astro';
 					<Github class="size-5"/>
 					Github
 				</Pills>
+				<Pills href="https://uninorte-my.sharepoint.com/personal/jborjaa_uninorte_edu_co/_layouts/15/download.aspx?SourceUrl=%2Fpersonal%2Fjborjaa%5Funinorte%5Fedu%5Fco%2FDocuments%2FDocumentos%2FDocumentos%20laborales%2FJorge%20Borja%2C%20Curriculum%20Vitae%2Epdf">
+					<Download class="size-5"/>
+					Curriculum
+				</Pills>
 				<Pills href="mailto:jorgeborja48@gmail.com">
 					<Email class="size-5"/>
 					jorgeborja48@gmail.com
@@ -44,7 +49,7 @@ import Website from '../components/icons/web.astro';
 		</section>
 		<section class="relative flex justify-center flex-col items-center timeline m-4 lg:m-auto" id="experience">
 			<h1 class="text-center !text-5xl lg:!text-9xl mx-auto z-[-1] opacity-60 font-black section-title">EXPERIENCE</h1>
-			<article class="mt-[-150px]">
+			<article class="lg:mt-[-120px]">
 				<div class="relative flex flex-col items-center" style="flex-flow: column;">
 					<div class="absolute w-1 h-0 bg-[#9d4edd] z-[-1] line-timeline" />
 					<div 
