--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Background from '../components/background.astro';
 import Header from '../components/header.astro';
 import Footer from '../components/footer.astro';
+import  SpeedInsights  from "@vercel/speed-insights/astro"
 
 import '@fontsource-variable/onest';
 
@@ -25,6 +26,7 @@ const { title, description } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+	<SpeedInsights/>
     <Background class="hidden lg:!block"/>
     <Header />
     <slot />
