--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,12 +13,12 @@ import Download from '../components/icons/download.astro';
 	description="Analista de datos con +3 años de experiencia, conocimientos avanzados en matemática y estadística. Ofrece servicios de análisis de la información, ciencia de datos y desarrollo de aplicaciones visuales."
 >
 	<main class="sm:!py-7">
-		<section class="w-full lg:w-[740px] mx-auto py-60 h-screen z-1">
+		<section class="w-full lg:w-[740px] mx-auto py-60 h-[70vh] lg:h-screen z-1">
 			<h2 class="text-[#9d4edd] text-center text-4xl animationn font-semibold">Data Analyst</h2>
 			<h1 class="text-center text-7xl font-bold">Jorge Borja Serrano</h1>
 			<span class="flex justify-center text-gray-500 mt-2">Data's Storyteller, Insight's Architect.</span>
 
-			<nav class="flex flex-col lg:flex-row gap-4 mt-3 justify-center">
+			<nav class="flex flex-col sm:flex-row md:flex-row lg:flex-row gap-4 mt-3 justify-center px-8 md:px-0 lg:px-0">
 				<Pills href="https://www.linkedin.com/in/jorgeborjas25/">
 					<LinkedIn class="size-5"/>
 					LinkedIn
@@ -37,8 +37,8 @@ import Download from '../components/icons/download.astro';
 				</Pills>
 			</nav>
 		</section>
-		<section class="flex justify-center w-full lg:w-[1140px] h-screen mx-auto text-animation z-1 mt-14" id="about">
-			<h1 class="text-center !text-5xl lg:!text-9xl mx-auto z-[-1] opacity-60 font-black lg:-mt-16 section-title">ABOUT ME</h1>
+		<section class="flex justify-center w-full lg:w-[1140px] h-[620px] lg:h-screen mx-auto text-animation z-1 mt-14" id="about">
+			<h1 class="text-center !text-5xl lg:!text-9xl mx-auto z-[-1] opacity-60 font-black lg:-mt-32 section-title">ABOUT ME</h1>
 			<p class="!text-xl lg:!text-5xl text-pretty reveal-text font-semibold m-4 lg:m-0 mt-28">
 				Data analyst with <span class="text-[#9d4edd] font-bold">+3 years of experience</span> in data analysis and interpretation. 
 				Strong foundation in <span class="text-[#9d4edd] font-bold">mathematics and statistics</span>, with a passion for theoretical 
@@ -49,7 +49,7 @@ import Download from '../components/icons/download.astro';
 		</section>
 		<section class="relative flex justify-center flex-col items-center timeline m-4 lg:m-auto" id="experience">
 			<h1 class="text-center !text-5xl lg:!text-9xl mx-auto z-[-1] opacity-60 font-black section-title">EXPERIENCE</h1>
-			<article class="lg:mt-[-120px]">
+			<article class="lg:mt-0">
 				<div class="relative flex flex-col items-center" style="flex-flow: column;">
 					<div class="absolute w-1 h-0 bg-[#9d4edd] z-[-1] line-timeline" />
 					<div 
