--- a/src/components/social-pills.astro
+++ b/src/components/social-pills.astro
@@ -1,5 +1,5 @@
 <a 
-    class="rounded-full border border-white/10 flex justify-center items-center gap-x-2 py-2 px-4 bg-white/5 hover:scale-105 hover:bg-white/10 transition"
+    class="rounded-full border border-white/10 flex justify-center items-center gap-x-2 py-2 px-4 bg-white/5 hover:scale-105 hover:bg-white/10 transition sm:max-w-80"
     {... Astro.props}
     target="_blank"
     rel="noopener noreferrer"
