--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,294 +1,29 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import LinkedIn from '../components/icons/linkedin.astro'
-import Pills from '../components/social-pills.astro';
-import Github from '../components/icons/github.astro';
-import Email from '../components/icons/email.astro';
-import Website from '../components/icons/web.astro';
-import Download from '../components/icons/download.astro';
+import HeroSection from '../components/sections/HeroSection.astro';
+import AboutSection from '../components/sections/AboutSection.astro';
+import ExperienceSection from '../components/sections/ExperienceSection.astro';
+import SkillsSection from '../components/sections/SkillsSection.astro';
+import ProjectSection from '../components/sections/ProjectSection.astro';
+import '../styles/global.css';
 ---
 
 <Layout 
-	title="Portfolio de Jorge Borja - Analista de Datos"
-	description="Analista de datos con +3 años de experiencia, conocimientos avanzados en matemática y estadística. Ofrece servicios de análisis de la información, ciencia de datos y desarrollo de aplicaciones visuales."
+    title="Portfolio de Jorge Borja - Analista de Datos"
+    description="Analista de datos con +4 años de experiencia, conocimientos avanzados en matemática y estadística. Ofrece servicios de análisis de la información, ciencia de datos y desarrollo de aplicaciones visuales."
 >
-	<main class="sm:!py-7">
-		<section class="w-full lg:w-[740px] mx-auto py-60 h-[70vh] lg:h-screen z-1">
-			<h2 class="text-[#9d4edd] text-center text-4xl animationn font-semibold">Data Analyst</h2>
-			<h1 class="text-center text-7xl font-bold">Jorge Borja Serrano</h1>
-			<span class="flex justify-center text-gray-500 mt-2">Data's Storyteller, Insight's Architect.</span>
-
-			<nav class="flex flex-col sm:flex-row md:flex-row lg:flex-row gap-4 mt-3 justify-center px-8 md:px-0 lg:px-0">
-				<Pills href="https://www.linkedin.com/in/jorgeborjas25/">
-					<LinkedIn class="size-5"/>
-					LinkedIn
-				</Pills>
-				<Pills href="https://github.com/unfresh25">
-					<Github class="size-5"/>
-					Github
-				</Pills>
-				<Pills href="https://uninorte-my.sharepoint.com/personal/jborjaa_uninorte_edu_co/_layouts/15/download.aspx?SourceUrl=%2Fpersonal%2Fjborjaa%5Funinorte%5Fedu%5Fco%2FDocuments%2FDocumentos%2FDocumentos%20laborales%2FJorge%20Borja%2C%20Curriculum%20Vitae%2Epdf">
-					<Download class="size-5"/>
-					Curriculum
-				</Pills>
-				<Pills href="mailto:jorgeborja48@gmail.com">
-					<Email class="size-5"/>
-					jorgeborja48@gmail.com
-				</Pills>
-			</nav>
-		</section>
-		<section class="flex justify-center w-full lg:w-[1140px] h-[620px] lg:h-screen mx-auto text-animation z-1 mt-14" id="about">
-			<h1 class="text-center !text-5xl lg:!text-9xl mx-auto z-[-1] opacity-60 font-black lg:-mt-32 section-title">ABOUT ME</h1>
-			<p class="!text-xl lg:!text-5xl text-pretty reveal-text font-semibold m-4 lg:m-0 mt-28">
-				Data analyst with <span class="text-[#9d4edd] font-bold">+3 years of experience</span> in data analysis and interpretation. 
-				Strong foundation in <span class="text-[#9d4edd] font-bold">mathematics and statistics</span>, with a passion for theoretical 
-				concepts and their practical applications. Adept at leveraging statistical techniques and data visualization tools to 
-				drive <span class="text-[#9d4edd] font-bold">insights</span> and support <span class="text-[#9d4edd] font-bold">decision-making</span> 
-				processes. 
-			</p>
-		</section>
-		<section class="relative flex justify-center flex-col items-center timeline m-4 lg:m-auto" id="experience">
-			<h1 class="text-center !text-5xl lg:!text-9xl mx-auto z-[-1] opacity-60 font-black section-title">EXPERIENCE</h1>
-			<article class="lg:mt-0">
-				<div class="relative flex flex-col items-center" style="flex-flow: column;">
-					<div class="absolute w-1 h-0 bg-[#9d4edd] z-[-1] line-timeline" />
-					<div 
-						class="grid grid-cols-3 gap-0 w-full ml-auto mr-auto pt-20 pb-20 opacity-10 timeline-text-k" 
-						style="grid-template-columns: 1fr 160px 1fr;"
-					>
-						<div>
-							<span class="font-medium !text-base lg:!text-5xl">
-								September, 2023
-							</span>
-						</div>
-						<div>
-							<div class="flex justify-center size-4 bg-white rounded-full m-auto ball-k" />
-						</div>
-						<div>
-							<p class="font-medium !text-xs lg:!text-xl text-pretty exp-p">
-								Started working at <span class="text-[#9d4edd] font-bold">Komatsu Colombia S.A.S.</span> as the principal data analyst,
-								responsible for <span class="text-[#9d4edd] font-bold">centralizing data</span> from over 100 databases,
-								creating <span class="text-[#9d4edd] font-bold">automation workflows</span> in Azure Data Factory, and developing
-								projects such as an inventory demand <span class="text-[#9d4edd] font-bold">forecasting</span> application,
-								<span class="text-[#9d4edd] font-bold">Monte Carlo simulations</span> for machine working hours, work order 
-								<span class="text-[#9d4edd] font-bold">automation</span>, predictions for <span class="text-[#9d4edd] font-bold">service 
-								offerings</span>, and creating elegant <span class="text-[#9d4edd] font-bold">Power BI reports</span>.
-							</p>														
-						</div>
-					</div>
-					<div 
-						class="grid grid-cols-3 gap-0 w-full ml-auto mr-auto pt-20 pb-20 opacity-10 timeline-text-ur" 
-						style="grid-template-columns: 1fr 160px 1fr"
-					>
-						<div>
-							<span class="font-medium !text-base lg:!text-5xl">
-								August, 2021
-							</span>
-						</div>
-						<div>
-							<div class="flex justify-center size-4 bg-white rounded-full m-auto ball-ur" />
-						</div>
-						<div>
-							<p class="font-medium !text-xs lg:!text-xl text-pretty exp-p">
-								Started working at <span class="text-[#9d4edd] font-bold">Urbefuturo</span> as a programmer data analyst, responsible for 
-								the <span class="text-[#9d4edd] font-bold">implementation of statistical methods</span> for data analysis and 
-								<span class="text-[#9d4edd] font-bold">restructuring</span> of the database. Creation of <span class="text-[#9d4edd] font-bold">reports 
-								and data visualization</span> using Power BI. Implementation of <span class="text-[#9d4edd] font-bold">geolocation</span> to 
-								keep control of the surveys and, consequently, implementation of predictive models to find the most 
-								<span class="text-[#9d4edd] font-bold">optimal locations</span> for conducting the surveys.
-							</p>														
-						</div>
-					</div>
-					<div 
-						class="grid grid-cols-3 gap-0 w-full ml-auto mr-auto pt-20 pb-20 opacity-10 timeline-text-phd" 
-						style="grid-template-columns: 1fr 160px 1fr"
-					>
-						<div>
-							<span class="font-medium !text-base lg:!text-5xl">
-								April, 2023 - May - 2023
-							</span>
-						</div>
-						<div>
-							<div class="flex justify-center size-4 bg-white rounded-full m-auto ball-phd" />
-						</div>
-						<div>
-							<p class="font-medium !text-xs lg:!text-xl text-pretty exp-p">
-								Advisor for <span class="text-[#9d4edd] font-bold">PhD thesis in mathematics</span>. Translation of existing codes to create 
-								<span class="text-[#9d4edd] font-bold">optimizations and implement</span> new analysis methods. Created <span class="text-[#9d4edd] font-bold">simulation 
-								of SPH</span> to understand its behavior in different scenarios and in different quantities. <span class="text-[#9d4edd] font-bold">Improvement</span> 
-								of the obtained mathematical calculations and conversion to code.
-							</p>														
-						</div>
-					</div>
-				</div>
-			</article>
-		</section>
-		<section class="flex overflow-hidden space-x-16 mt-32">
-			<article class="flex items-center space-x-16 animate-loop-scroll skills">
-				<img loading="lazy" src="https://i.pinimg.com/originals/82/a2/18/82a2188c985ce75402ae44fc43fe7e5e.png" class="max-w-none" alt="Python">
-				<img loading="lazy" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/R_logo.svg/1280px-R_logo.svg.png" class="max-w-none" alt="R">
-				<img loading="lazy" src="https://play-lh.googleusercontent.com/oiIVJOsRwPWMv5FfkneTnsuN-GdB53QUH49vfKBFP0iUnlSw3I4NnxDP0w7CMgqttXQ" class="max-w-none" alt="SPSS">
-				<img loading="lazy" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/New_Power_BI_Logo.svg/1024px-New_Power_BI_Logo.svg.png" class="max-w-none" alt="Power BI">
-				<img loading="lazy" src="https://swimburger.net/media/ppnn3pcl/azure.png" class="max-w-none" alt="Azure">
-				<img loading="lazy" src="https://tribes.agency/wp-content/uploads/2023/10/ext-550.png" class="max-w-none" alt="SQL Server">
-				<img loading="lazy" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Postgresql_elephant.svg/993px-Postgresql_elephant.svg.png" class="max-w-none" alt="PostgreSQL">
-				<img loading="lazy" src="https://cdn4.iconfinder.com/data/icons/logos-and-brands/512/97_Docker_logo_logos-512.png" class="max-w-none" alt="Docker">
-				<img loading="lazy" src="https://astro.js.org/astro.png" class="max-w-none" alt="Astro">
-				<img loading="lazy" src="https://www.loopple.com/img/tailwind-logo.png" class="max-w-none" alt="Tailwind">
-			</article>
-			<article class="flex items-center space-x-16 animate-loop-scroll skills ">
-				<img loading="lazy" src="https://i.pinimg.com/originals/82/a2/18/82a2188c985ce75402ae44fc43fe7e5e.png" class="max-w-none" alt="Python">
-				<img loading="lazy" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/R_logo.svg/1280px-R_logo.svg.png" class="max-w-none" alt="R">
-				<img loading="lazy" src="https://play-lh.googleusercontent.com/oiIVJOsRwPWMv5FfkneTnsuN-GdB53QUH49vfKBFP0iUnlSw3I4NnxDP0w7CMgqttXQ" class="max-w-none" alt="SPSS">
-				<img loading="lazy" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/New_Power_BI_Logo.svg/1024px-New_Power_BI_Logo.svg.png" class="max-w-none" alt="Power BI">
-				<img loading="lazy" src="https://swimburger.net/media/ppnn3pcl/azure.png" class="max-w-none" alt="Azure">
-				<img loading="lazy" src="https://tribes.agency/wp-content/uploads/2023/10/ext-550.png" class="max-w-none" alt="SQL Server">
-				<img loading="lazy" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Postgresql_elephant.svg/993px-Postgresql_elephant.svg.png" class="max-w-none" alt="PostgreSQL">
-				<img loading="lazy" src="https://cdn4.iconfinder.com/data/icons/logos-and-brands/512/97_Docker_logo_logos-512.png" class="max-w-none" alt="Docker">
-				<img loading="lazy" src="https://astro.js.org/astro.png" class="max-w-none" alt="Astro">
-				<img loading="lazy" src="https://www.loopple.com/img/tailwind-logo.png" class="max-w-none" alt="Tailwind">
-			</article>
-		</section>		
-		<section class="w-full lg:w-[1140px] mx-auto mt-32 z-1 projects-section" id="projects">
-			<h1 class="text-center !text-5xl lg:!text-9xl mx-auto z-[-3] opacity-60 font-black section-title">PROJECTS</h1>
-			<article class="flex flex-col w-full h-screen bg-[#222] mt-80 opacity-0 rounded-md overflow-hidden efinex">
-				<div class="relative w-full h-full video-container">
-					<video src="/videos/efinex-video.mp4" class="absolute top-0 left-0 w-full h-full object-cover" muted></video>
-					<div class="
-						absolute z-2 bottom-0 top-0 w-full h-full
-						bg-gradient-to-b from-transparent from-40% via-black/50 to-black/80
-					">
-					</div>
-					<div class="absolute opacity-0 top-[40%] z-10 px-3 lg:p-16 project-hover-text">
-						<h2 class="!text-3xl lg:!text-6xl font-bold text-[#9d4edd] animationn">EFINEX</h2>
-						<p class="mt-5 text-pretty text-base lg:!text-xl project-exp">
-							This web application allows users to explore the current stock market by interacting with statistical graphs and viewing market 
-							data by hovering over them. It includes indicators such as On-Balance Volume (OBV), Moving Average Convergence/Divergence (MACD), 
-							Stochastic Oscillator (SO), and Accumulation/Distribution (A/D). The app offers an excellent user experience, developed with Dash and 
-							Plotly APIs, and was challenging to create due to the multiple callbacks and statistical calculations involved.
-						</p>
-
-						<nav class="flex gap-x-3 mt-3">
-							<Pills href="https://github.com/unfresh25/finance-dash-explorer">
-								<Github class="size-5" />
-								View code
-							</Pills>
-							<Pills href="https://finance-dash-explorer.onrender.com/">
-								<Website class="size-5" />
-								View website
-							</Pills>
-						</nav>
-					</div>
-				</div>
-			</article>
-			<article class="flex flex-col w-full h-screen bg-[#222] mt-80 opacity-0 rounded-md overflow-hidden f1-dash">
-				<div class="relative w-full h-full video-container">
-					<video src="/videos/f1-video.mp4" class="absolute top-0 left-0 w-full h-full object-cover" muted></video>
-					<div class="
-						absolute z-2 bottom-0 top-0 w-full h-full
-						bg-gradient-to-b from-transparent from-10% via-black/50 to-black/80
-					">
-					</div>
-					<div class="absolute opacity-0 top-[40%] z-10 px-3 lg:p-16 project-hover-text">
-						<h2 class="!text-3xl lg:!text-6xl font-bold text-[#9d4edd] animationn">F1 Dashboard</h2>
-						<p class="mt-5 text-pretty text-base lg:!text-xl project-exp">
-							The application is designed to provide a comprehensive overview of Formula 1 racing data, including race results, driver performance, and circuit 
-							information. The user can explore and analyze the data in various ways to gain insights into the drivers, races, and circuits of the world's most 
-							prestigious Formula 1 racing organization.
-						</p>
-
-						<nav class="flex gap-x-3 mt-3">
-							<Pills href="https://github.com/unfresh25/finance-dash-explorer">
-								<Github class="size-5" />
-								View code
-							</Pills>
-							<Pills href="https://finance-dash-explorer.onrender.com/">
-								<Website class="size-5" />
-								View website
-							</Pills>
-						</nav>
-					</div>
-				</div>
-			</article>
-		</section>
-	</main>
+    <main class="sm:!py-7">
+        <HeroSection />
+        <AboutSection />
+        <ExperienceSection />
+        <SkillsSection />
+        <ProjectSection />
+    </main>
 </Layout>
 
-<style>
-	.animationn {
-		background: linear-gradient(to right, #9d4edd 0, white 10%, #9d4edd 20%);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		animation: shine 3s linear infinite;
-	}
-
-	.section-title {
-		color: transparent;
-		-webkit-text-fill-color: transparent;
-		-webkit-text-stroke-width: 1.3px;
-		-webkit-text-stroke-color: white;
-		font-size: 180px;
-	}
-
-	.reveal-text {
-		position: absolute;
-		max-width: 35ch;
-	}
-
-	.reveal-text-hover {
-		opacity: 1;
-		position: absolute;
-		width: 0%;
-		max-width: 35ch;
-		white-space: nowrap;
-		overflow: hidden;
-	}
-
-	@keyframes shine {
-		0% {
-			background-position: 0;
-		}
-		50% {
-			background-position: 470px;
-		}
-		100% {
-			background-position: 470px;
-		}
-	}
-
-	.exp-p {
-		max-width: 40ch;
-	}
-
-	.skills > img {
-		height: 50px;
-	}
-
-	@media (min-width: 1024px) {
-		.skills > img {
-			height: 100px;
-		}
-	}
-
-	.project-exp {
-		max-width: 60ch;
-	}
-
-	.video-container:hover .project-hover-text{
-		opacity: 1;
-	}
-
-	.project-hover-text {
-		opacity: 0;
-		transition: opacity 0.5s ease-in-out;
-	}
-
-</style>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/split-type"></script>
 <script src="https://unpkg.com/lenis@1.0.45/dist/lenis.min.js"></script> 
-
 <script src="../scripts/gsap.ts"></script>
 <script src="../scripts/video_hover.ts"></script>
